# Messenger

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  justfile  pom.xml
analytics/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
analytics/src/: analytics.py  consumer.py  dashboard.py  db.py  main.py  models.py  scheduler.py
analytics/src/clickhouse/: client.py
analytics/src/config/: settings.py
analytics/src/service/: MetricsAnalyzer.py  MetricsFetcher.py  MetricsSaver.py
backend/: Dockerfile  HELP.md  pom.xml
clickhouse/init/: 01-kafka-engine-tables.sql  02-target-tables.sql  03-materialized-view-business-main.sql  04-materialized-view-business-session.sql  05-materialized-view-business-latency.sql  06-materialized-view-technical-metrics.sql  07-materialized-view-user-activity.sql  08-grafana-kpi-metrics.sql  09-grafana-dau-mau-metrics.sql
deploy/: Dockerfile  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  globals.css  index.css  main.tsx
frontend/src/pages/: AuthPage.css  AuthPage.tsx  ChatPage.css  ChatPage.tsx  ChatsPage.css  ChatsPage.tsx
frontend/src/services/: authService.ts  chatService.ts  websocketService.ts
frontend/src/types/: auth.ts
grafana/dashboards-structure/: dashboard-1777218709326.json  dashboard-1777218735564.json  dashboard-1777218747344.json
grafana/provisioning/datasources/: clickhouse.yaml
otel-collector/: otel-collector-config.yaml
src/main/resources/: application.properties
(+127 files in other folders)
