[tool.poetry]
name = "analytics"
version = "0.1.0"
description = ""
authors = ["appleaww <artemmorozz2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
pandas = "^2.2.0"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
numpy = "^2.4.1"
sqlalchemy = "^2.0"
plotly = "^6.5.2"
clickhouse-connect = "^0.15.1"
apscheduler = "^3.11.2"
pydantic-settings = "^2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
